[package]
name = "cargo-no-std"
version = "0.1.2"
edition = "2024"
rust-version = "1.88.0"

description = "Validate no_std compliance"
readme = "README.md"
repository = "https://github.com/wojciech-graj/cargo-no-std"
license = "GPL-3.0-only"
keywords = ["no-std"]
categories = [
  "command-line-utilities",
  "development-tools",
  "development-tools::cargo-plugins"
]

[dependencies]
anyhow = "1.0"
cargo_metadata = "0.23"
cargo_toml = "0.22"
clap = { version = "4.0", features = ["cargo", "derive"] }
clap-cargo = { version = "0.18", features = ["cargo_metadata"] }
colored = "3.0"
env_logger = "0.11"
indicatif = "0.18"
indicatif-log-bridge = "0.2"
log = "0.4"
quote = "1.0"
rayon = "1.0"
serde_json = "1.0"
tempfile = "3.0"
toml = "0.9"

[dev-dependencies]
assert_cmd = "2.1"

[profile.dist]
inherits = "release"
lto = "thin"
